# cache-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/commands/: check-diagrams.md
.github/workflows/: ci.yml
cache-research/: weekly-cache-report-2026-05-17.md  weekly-cache-report-2026-05-24.md  weekly-cache-report-2026-05-31.md  weekly-cache-report-2026-06-07.md
crates/cuckoo/: Cargo.toml
crates/cuckoo/src/: builder.rs  cuckoo.rs  error.rs  item.rs  lib.rs  metrics.rs  tests.rs
crates/datatier/: Cargo.toml
crates/datatier/src/: lib.rs
crates/keyvalue/: Cargo.toml
crates/keyvalue/src/: lib.rs  tiny.rs  value.rs
crates/keyvalue/src/item/: header.rs  mod.rs  raw.rs
crates/s3fifo/: Cargo.toml
crates/s3fifo/benches/: benchmark.rs
crates/s3fifo/src/: builder.rs  clock.rs  error.rs  ghost.rs  lib.rs  metrics.rs  s3fifo.rs  slab.rs  tests.rs  value.rs
crates/s3fifo/src/hashtable/: hash_bucket.rs  mod.rs
crates/s3fifo/src/item/: header.rs  mod.rs  raw.rs
crates/s3fifo/tests/: integration_basic.rs
crates/segcache/: Cargo.toml
crates/segcache/benches/: benchmark.rs
crates/segcache/fuzz/: Cargo.toml
crates/segcache/fuzz/fuzz_targets/: segcache.rs
crates/segcache/src/: builder.rs  cas.rs  error.rs  lib.rs  metrics.rs  rand.rs  segcache.rs  sync.rs  tests.rs  value.rs
crates/segcache/src/eviction/: ghost.rs  mod.rs  policy.rs
crates/segcache/src/hashtable/: bucket.rs  hash_bucket.rs  location.rs  mod.rs  table.rs  traits.rs
crates/segcache/src/item/: header.rs  mod.rs  raw.rs  reserved.rs
crates/segcache/src/segments/: builder.rs  error.rs  guard.rs  header.rs  mod.rs  segment.rs  segments.rs
crates/segcache/src/ttl_buckets/: error.rs  mod.rs  tests.rs  ttl_bucket.rs  ttl_buckets.rs
crates/segcache/tests/: integration_basic.rs  integration_eviction.rs
docs/: cuckoo.md  datatier.md  design.md  keyvalue.md  s3fifo.md  segcache.md
