[workspace]
resolver = "2"
members = [
    "crates/cuckoo",
    "crates/datatier",
    "crates/keyvalue",
    "crates/segcache",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pelikan-io/cache-rs"

[workspace.dependencies]
ahash = "0.8.12"
blake3 = "1.8.3"
clocksource = "0.8.3"
criterion = "0.8.2"
datatier = { path = "crates/datatier", version = "0.1.1" }
keyvalue = { path = "crates/keyvalue", version = "0.1.0" }
log = "0.4.29"
memmap2 = "0.9.10"
metriken = "0.7.0"
rand = "0.10.1"
rand_xoshiro = "0.8.0"
thiserror = "2.0.18"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
