[package]
name = "s3fifo"
version = "0.1.0"
description = "S3-FIFO cache eviction algorithm: three static FIFO queues for efficient caching"
authors = ["Pelikan Cache contributors"]

edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[features]

# enables setting/checking magic strings
magic = ["keyvalue/magic"]

# enables metrics
metrics = ["metriken"]

# metafeatures
debug = ["magic"]

# default set of enabled features
default = ["metrics"]

[dependencies]
ahash = { workspace = true }
clocksource = { workspace = true }
datatier = { workspace = true }
keyvalue = { workspace = true, features = [] }
log = { workspace = true }
metriken = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
