[package]
name = "segcache"
version = "0.2.0"
description = "Segment-structured cache storage engine with eager TTL expiration"
authors = ["Brian Martin <brian@pelikan.io>"]

edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[features]

# enables item header integrity (magic + CRC32)
integrity = ["keyvalue/integrity"]

# enables metrics
metrics = ["metriken"]

# enables loom concurrency model checking for the hashtable
loom = ["dep:loom"]

# metafeatures
debug = ["integrity"]

# default set of enabled features
default = ["metrics"]

[dependencies]
ahash = { workspace = true }
clocksource = { workspace = true }
keyvalue = { workspace = true, features = [] }
log = { workspace = true }
metriken = { workspace = true, optional = true }
rand = { workspace = true, features = ["sys_rng"] }
rand_xoshiro = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }

loom = { version = "0.7", features = ["checkpoint"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
